# macro-in-python

./: README.ja.md  README.md  pyproject.toml
src/macro_in_python/: __init__.py  apply.py  errors.py  macro.py  main.py  to_file.py  utils.py
tests/: test_apply.py  test_file_convert.py
