[project]
name = "macro-in-python"
version = "0.1.0"
description = "Using Macros in Python."
authors = [
    { name = "nahco314", email = "nahco3_ta@yahoo.co.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
macro-in-python = "macro_in_python.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black~=23.3.0", "isort~=5.12.0", "mypy~=1.4.0", "pytest~=7.3.2"]
[tool.hatch.metadata]
allow-direct-references = true
